test/src/e2e_vm_tests/test_programs/should_fail/generics_multiple_type_arguments/src/main.sw
script;

dep lib_a;

fn main() -> u64 {

    let e = lib_a::inner_lib::MyEnum::<u64>::VariantA::<u64>;

    5
}
